Fix vertical alignment of icons in navigation bar

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -125,11 +125,15 @@ pre {
   background: #cef;
 }
 
+/* ===== pages ===== */
+
 .btn svg {
   vertical-align: text-top;
 }
 
-/* ===== pages ===== */
+.nav-icons svg {
+  vertical-align: middle;
+}
 
 img.shadow {
   box-shadow: -4px 16px 32px #999, 4px 16px 32px #999;
